feat: subscriber functionality
